...
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>}
    <string name="album_name">Nombre del album</string>
    <string name="album_description">"Descripción del album</string>
    <string name="coleccionista">Coleccionista</string>
    <string name="usuario">Usuario</string>
    <string name="username">"Nombre de usuario</string>
    <string name="hello_album_fragment">Sección de Albums</string>
    <string name="action_ingresar">Ingresar</string>
    <string name="title_albums">Título del Album</string>
    <string name="action_settings">Configuración</string>
...
    <string name="nameAlbum">Nombre del álbum</string>
    <string name="cover">Url cubierta álbum</string>
    <string name="releaseDate">Fecha de lanzamiento</string>
    <string name="description">Descripción</string>
    <string name="genre">Genero</string>
    <string name="recordLabel">Record Label</string>
    <string name="submit">Guardar</string>
    <string name="crear_album">Agregar Album</string>
    <string name="txt_no_tracks">no hay tracks</string>
    <string name="duration">Duracion</string>
    <string name="name">Nombre</string>

    <string name="performer_name">Nombre del músico</string>
    <string name="title_performer">Artista</string>
...
