...
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_album_add_24"
        android:contentDescription="@string/crear_album"
        android:layout_margin="16dp"
        android:onClick="onMyButtonClick"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/albumsRv"
        android:layout_width="351dp"
        android:layout_height="match_parent"
        tools:listitem="@layout/album_item" />

</FrameLayout>
