...
        tools:listitem="@layout/track_item">


    </androidx.recyclerview.widget.RecyclerView>

    <EditText
        android:id="@+id/edt_name_track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_marginTop="16dp"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/edt_dur_track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_marginTop="16dp"
        android:hint="@string/duration" />

    <Button
        android:id="@+id/btnAgregarTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:text="Agregar Track" />

</LinearLayout>
